[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/wizard/Abilities/Ball/BallBullet.gd" type="Script" id=1]
[ext_resource path="res://Items/wizard/Abilities/Ball/ball_bullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}

[node name="FireMeteorBullet" type="Area2D"]
collision_layer = 16
collision_mask = 129
script = ExtResource( 1 )
life_range = 10
speed = 7

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "travel"
anims/explode = SubResource( 2 )
anims/travel = SubResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_BallBullet_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
